--- a/HTML/Form/Form.html
+++ b/HTML/Form/Form.html
@@ -36,10 +36,10 @@
         <input type="number" name="Age" id="txtAge" />
         <br />
         <label for="Gender">Gender:</label>
-        <input type="radio" name="Female" id="rdFemale" value="Female" />
+        <input type="radio" name="Gender" id="rdFemale" value="Female" />
         <label for="html">Female</label><br />
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <input type="radio" name="Male" id="rdMale" value="Male" />
+        <input type="radio" name="Gender" id="rdMale" value="Male" />
 
         <label for="html">Male</label><br />
         <br />&nbsp;&nbsp;&nbsp;
